# boston_final

./: CMakeLists.txt  main.cpp
src/features/: collide.cpp  collide.h
src/gameplay/attacks/: attack.cpp  attack.h  attack_script.cpp  attacks.cpp  compile  run.sh
src/gameplay/attacks/script/: attacks  cheat_sheet.txt  images  init
src/gameplay/box/: box.cpp  box.h  box_text.cpp
src/gameplay/buttons/: button.cpp  button.h
src/gameplay/heart/: heart.cpp  heart.h
src/gameplay/scout/: scout.cpp  scout.h
src/gameplay/script/: attacks  images  init
src/rendering/: rendering.cpp  rendering.h
src/rendering/font/: alphabet.h  font.cpp  font.h
